--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -29,38 +29,79 @@
       min-height: 70px;
 
       display: flex;
-
-      &_calendar {
-         margin-right: 65px;
-         height: 70px;
+      &_donat {
          display: flex;
          align-items: center;
-         &_logo {
-            margin-right: 18px;
-            max-height: 39px;
-         }
-         &_title {
-            display: flex;
-            align-items: center;
-            height: 70px;
-         }
-      }
-      &_designer {
+         justify-content: center;
+         width: 179px;
+         height: 70px;
          margin-right: 30px;
-         padding: 0 5px;
+         font-size: 20px;
+         &::before {
+            content: "";
+            background: url("/icons/donat.svg") no-repeat right center;
+            width: 39px;
+            height: 39px;
+            margin-right: 10px;
+         }
+      }
+      &_files {
+         display: flex;
+         align-items: center;
+         justify-content: center;
+         width: 179px;
+         height: 70px;
+         margin-right: 30px;
+         &::before {
+            content: "";
+            background: url("/icons/files.svg") no-repeat right center;
+            width: 39px;
+            height: 39px;
+            margin-right: 10px;
+         }
+      }
+
+      &_calendar-switch {
+         width: 120px;
          height: 70px;
          display: flex;
          align-items: center;
-         &_logo {
-            margin-right: 18px;
-            max-height: 39px;
-         }
-         &_title {
+         justify-content: center;
+         margin-right: 50px;
+         &_button {
+            position: relative;
+            &::after {
+               right: -55px;
+               width: 36px;
+               height: 36px;
+               position: absolute;
+               content: "";
+               background: url("/icons/calendar.svg") no-repeat right center;
+            }
+            &::before {
+               left: -65px;
+               width: 48px;
+               height: 44px;
+               position: absolute;
+               content: "";
+               background: url("/icons/spis.svg") no-repeat right center;
+            }
             display: flex;
             align-items: center;
-            height: 70px;
+            height: 21px;
+            width: 43px;
+            background-color: rgb(0, 0, 0);
+            border-radius: 90px;
+            padding: 0 5px;
+            &_selector {
+               background-color: #fff;
+               width: 11px;
+               height: 11px;
+               border-radius: 90px;
+            }
          }
       }
+
       &_theme-switch {
          width: 120px;
          height: 70px;
