--- a/sass/blocks/_timetable.scss
+++ b/sass/blocks/_timetable.scss
@@ -11,6 +11,9 @@
       color: #000000;
       display: flex;
       justify-content: space-around;
+      &_scoreboard_day-of-week {
+         margin-bottom: 10px;
+      }
       &_day {
          color: #000000;
          font-family: Bad Script;
@@ -19,7 +22,7 @@
       }
 
       &_leftBTN {
-         margin-top: 15px;
+         margin-top: 22px;
          display: inline-block;
          width: 63px;
          height: 69px;
@@ -33,7 +36,7 @@
          }
       }
       &_rightBTN {
-         margin-top: 15px;
+         margin-top: 18px;
          display: inline-block;
          width: 63px;
          height: 69px;
