--- a/sass/blocks/_timetable.scss
+++ b/sass/blocks/_timetable.scss
@@ -1,4 +1,6 @@
 .timetable {
+   opacity: 0;
+   animation: ani 1s forwards;
    margin-top: 93px;
    &__date {
       margin: 15px auto 0;
@@ -127,6 +129,7 @@
       display: flex;
       align-items: center;
       text-align: center;
+      justify-content: space-around;
    }
    &__add-information {
       display: flex;
@@ -151,5 +154,13 @@
          font-weight: normal;
          font-size: 20px;
       }
+   }
+}
+@keyframes ani {
+   0% {
+      opacity: 0;
+   }
+   100% {
+      opacity: 1;
    }
 }
