--- a/css/normalaze.css
+++ b/css/normalaze.css
@@ -78,4 +78,9 @@ h6 {
    font-size: inherit;
    font-weight: 400;
 }
+/* при наведении */
+a {
+   text-decoration: none;
+   color: rgb(0, 0, 0);
+}
 /*--------------------*/
