--- a/sass/blocks/_calendar.scss
+++ b/sass/blocks/_calendar.scss
@@ -1,5 +1,4 @@
 .calendar {
-   display: none;
    width: 710px;
    height: 485px;
 
@@ -12,13 +11,13 @@
       text-align: center;
       &_namber-box {
          display: block;
-         height: 440px;
+         min-height: 440px;
          width: 100%;
          border-top: 4px solid #000000;
          border-bottom: 4px solid #000000;
          &_wrapper {
             width: 100%;
-            height: 360px;
+
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
@@ -54,7 +53,8 @@
 
 .lesson-type {
    display: flex;
-   margin-top: 38px;
+   margin-top: 20px;
+   margin-bottom: 13px;
    padding-left: 23px;
    height: 20px;
    width: 100%;
