--- a/sass/base/_animatoin.scss
+++ b/sass/base/_animatoin.scss
@@ -1,11 +1,11 @@
 @keyframes lesson {
    0% {
-      -moz-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.5);
-      box-shadow: 0 0 0 0 rgba(4, 255, 16, 0.4);
+      -moz-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.4);
+      box-shadow: 0 0 0 0 rgba(4, 255, 16, 0.7);
    }
    70% {
       -moz-box-shadow: 0 0 0 10px rgba(204, 169, 44, 0);
-      box-shadow: 0 0 0 670px rgba(0, 255, 55, 0);
+      box-shadow: 0 0 0 15px rgba(11, 231, 59, 0);
    }
    100% {
       -moz-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
@@ -13,5 +13,12 @@
    }
 }
 .animation {
-   animation: lesson 2.5s infinite;
+   animation: lesson 2s infinite;
+}
+
+.lekciya {
+   background-color: #deffdb;
+}
+.eczamen {
+   background-color: #febbbb;
 }
