--- a/sass/blocks/_calendar.scss
+++ b/sass/blocks/_calendar.scss
@@ -1,8 +1,9 @@
 .calendar {
    width: 710px;
-   height: 485px;
+   min-height: 485px;
 
    margin: 0 auto;
+   margin-top: 30px;
    &__date {
       min-height: 45px;
       display: flex;
@@ -43,12 +44,14 @@
    border-radius: 12px;
    font-family: Lexend Deca;
    font-style: normal;
-
    font-size: 36px;
    line-height: 45px;
    align-items: center;
-
    justify-content: center;
+   transition: all 0.3s ease;
+   &:hover {
+      box-shadow: inset 0 0 0 5px #53ea93;
+   }
 }
 
 .lesson-type {
